latest i18n data from Transifex

--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_ca.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_ca.properties
@@ -260,3 +260,15 @@ guiWarning = Av\u00eds
 guiDuplicate = Fitxer de regles duplicat\!
 
 ja = japon\u00e8s
+
+language_not_supported = Error\: Disculpeu, la llengua "{0}" del document no funciona amb LanguageTool.
+
+http_server_start_failed = El servidor HTTP de LanguageTool no s'ha pogut iniciar en l'amfitri\u00f3 "{0}", port {1}.\u23ce Potser ja s'est\u00e0 executant una altra cosa en aquest port.
+
+https_server_start_failed = El servidor HTTP de LanguageTool no s'ha pogut iniciar en l'amfitri\u00f3 "{0}", port {1}.\u23ce Potser ja s'est\u00e0 executant una altra cosa en aquest port.
+
+https_server_start_failed_unknown_reason = El servidor HTTP de LanguageTool no s'ha pogut iniciar en l'amfitri\u00f3 "{0}", port {1}
+
+tray_menu_enable_server = Executa el servidor HTTP
+
+tray_tooltip_server_running = LanguageTool (servidor HTTP en execuci\u00f3)
