--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_de.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_de.properties
@@ -260,3 +260,15 @@ guiWarning = Warnung
 guiDuplicate = Doppelte Regel-Datei\!
 
 ja = Japanisch
+
+language_not_supported = Fehler\: Die Dokumentsprache "{0}" wird von LanguageTool nicht unterst\u00fctzt.
+
+http_server_start_failed = Der LanguageTool HTTP-Server konnte nicht auf "{0}", Port "{1}" gestartet werden. L\u00e4uft eventuell bereits eine andere Applikation dort?
+
+https_server_start_failed = Der LanguageTool HTTPS-Server konnte nicht auf "{0}", Port "{1}" gestartet werden. L\u00e4uft eventuell bereits eine andere Applikation dort?
+
+https_server_start_failed_unknown_reason = Der LanguageTool HTTPS-Server konnte nicht auf "{0}", Port "{1}" gestartet werden
+
+tray_menu_enable_server = HTTP-Server aktivieren
+
+tray_tooltip_server_running = LanguageTool (HTTP-Server aktiv)
