--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_en.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_en.properties
@@ -253,7 +253,7 @@ pt = Portuguese
 
 pt-BR = Portuguese (Brazil)
 
-pt-PT = Portuguese (Portugal) 
+pt-PT = Portuguese (Portugal)
 
 guiWarning = Warning
 
@@ -261,7 +261,7 @@ guiDuplicate = Duplicate rule file\!
 
 ja = Japanese
 
-language_not_supported = Error: Sorry, the document language "{0}" is not supported by LanguageTool.
+language_not_supported = Error\: Sorry, the document language "{0}" is not supported by LanguageTool.
 
 http_server_start_failed = LanguageTool HTTP server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
 
