--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_eo.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_eo.properties
@@ -260,3 +260,15 @@ guiWarning = Averto
 guiDuplicate = Duobla dosiero de reguloj\!
 
 ja = Japana
+
+language_not_supported = Eraro\: la lingvo "{0}" de la dokumento beda\u016drinde ne estas subtenata de Lingvoilo.
+
+# http_server_start_failed = LanguageTool HTTP server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
+
+# https_server_start_failed = LanguageTool HTTPS server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
+
+# https_server_start_failed_unknown_reason = LanguageTool HTTPS server could not be started on host "{0}", port {1}
+
+tray_menu_enable_server = Ruli la HTTP-servilon
+
+tray_tooltip_server_running = Lingvoilo (HTTP-servilo ruli\u011das)
