--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_es.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_es.properties
@@ -260,3 +260,15 @@ guiWarning = Aviso
 guiDuplicate = \u00a1Archivo de reglas duplicado\!
 
 ja = japon\u00e9s
+
+language_not_supported = Error\: Lo sentimos, el idioma "{0}" del documento no es soportado por LanguageTool.
+
+http_server_start_failed = El servidor HTTP de LanguageTool no se ha podido iniciar en el host "{0}", puerto {1}.\nQuiz\u00e1s hay algo m\u00e1s ya ejecut\u00e1ndose en ese puerto.
+
+https_server_start_failed = El servidor HTTPS de LanguageTool no se ha podido iniciar en el host "{0}", puerto {1}.\nQuiz\u00e1s hay algo m\u00e1s ya ejecut\u00e1ndose en ese puerto.
+
+https_server_start_failed_unknown_reason = El servidor HTTPS de LanguageTool no se ha podido iniciar en el host "{0}", puerto {1}
+
+tray_menu_enable_server = Ejecutar servidor HTTP
+
+tray_tooltip_server_running = LanguageTool (servidor HTTP ejecut\u00e1ndose)
