--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_gl.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_gl.properties
@@ -260,3 +260,15 @@ guiWarning = Atenci\u00f3n
 guiDuplicate = Ficheiro de regras duplicado\!
 
 ja = Xapon\u00e9s
+
+language_not_supported = Erro\: desculpe, o idioma "{0}" do documento non ten soporte en LanguageTool.
+
+http_server_start_failed = O servidor HTTP de LanguageTool non est\u00e1 funcionando en "{0}", porto {1}. Se cadra hai algo xa execut\u00e1ndose nese porto.
+
+https_server_start_failed = O servidor HTTPS de LanguageTool non est\u00e1 funcionando en "{0}", porto {1}. Se cadra hai algo xa execut\u00e1ndose nese porto.
+
+https_server_start_failed_unknown_reason = Non se puido arrancar o servidor HTTPS de LanguageTool en "{0}", porto {1}.
+
+tray_menu_enable_server = Executar servidor HTTP
+
+tray_tooltip_server_running = LanguageTool (servidor HTTP en execuci\u00f3n)
