--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_is.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_is.properties
@@ -253,10 +253,22 @@ whitespace_repetition = Hugsanleg ritvilla\: endurteki\u00f0 bil
 
 # pt-BR = Portuguese (Brazil)
 
-# pt-PT = Portuguese (Portugal) 
+# pt-PT = Portuguese (Portugal)
 
 # guiWarning = Warning
 
 # guiDuplicate = Duplicate rule file\!
 
 # ja = Japanese
+
+# language_not_supported = Error\: Sorry, the document language "{0}" is not supported by LanguageTool.
+
+# http_server_start_failed = LanguageTool HTTP server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
+
+# https_server_start_failed = LanguageTool HTTPS server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
+
+# https_server_start_failed_unknown_reason = LanguageTool HTTPS server could not be started on host "{0}", port {1}
+
+# tray_menu_enable_server = Run HTTP server
+
+# tray_tooltip_server_running = LanguageTool (HTTP server running)
