--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_km.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_km.properties
@@ -260,3 +260,15 @@ guiWarning = \u1780\u17b6\u179a\u1796\u17d2\u179a\u1798\u17b6\u1793
 guiDuplicate = \u1785\u17d2\u1794\u17b6\u1794\u17cb\u17af\u1780\u179f\u17b6\u179a\u1787\u17b6\u1793\u17cb\u1782\u17d2\u1793\u17b6
 
 ja = \u1797\u17b6\u179f\u17b6\u1787\u1794\u17c9\u17bb\u1793 \u17ac \u1794\u17d2\u179a\u1787\u17b6\u1787\u1793\u1787\u1794\u17c9\u17bb\u1793
+
+# language_not_supported = Error\: Sorry, the document language "{0}" is not supported by LanguageTool.
+
+# http_server_start_failed = LanguageTool HTTP server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
+
+# https_server_start_failed = LanguageTool HTTPS server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
+
+# https_server_start_failed_unknown_reason = LanguageTool HTTPS server could not be started on host "{0}", port {1}
+
+# tray_menu_enable_server = Run HTTP server
+
+# tray_tooltip_server_running = LanguageTool (HTTP server running)
