--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_nl.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_nl.properties
@@ -260,3 +260,15 @@ guiWarning = Waarschuwing
 guiDuplicate = Bestand met regels is al geladen
 
 ja = Japans
+
+language_not_supported = Fout\: Sorry, de taal "{0}"wordt niet ondersteund door LanguageTool.
+
+http_server_start_failed = De HTTP-server van LanguageTool kon niet gestart worden op computer "{0}", poort {1}. Is die poort al in gebruik?
+
+https_server_start_failed = De HTTPS-server van LanguageTool kon niet gestart worden op computer "{0}", poort {1}. Is die poort al in gebruik?
+
+https_server_start_failed_unknown_reason = De HTTPS-server van LanguageTool kon niet gestart worden op computer "{0}", poort {1}. 
+
+tray_menu_enable_server = Voor de HTTP-server uit.
+
+tray_tooltip_server_running = LanguageTool (HTTP-server actief)
