--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_pl.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_pl.properties
@@ -260,3 +260,15 @@ guiWarning = Ostrze\u017cenie
 guiDuplicate = Wybrany plik regu\u0142 jest ju\u017c za\u0142adowany. Wybierz inny plik regu\u0142.
 
 ja = japo\u0144ski
+
+language_not_supported = B\u0142\u0105d\: Niestety, j\u0119zyk dokumentu "{0}" nie jest obs\u0142ugiwany w programie LanguageTool.
+
+http_server_start_failed = Nie mo\u017cna uruchomi\u0107 serwera HTTP programu LanguageTool na serwerze "{0}" i porcie {1}.\n\nMo\u017cliwe, \u017ce ten port jest wykorzystywany przez inny proces.
+
+https_server_start_failed = Nie mo\u017cna uruchomi\u0107 serwera HTTPS programu LanguageTool na serwerze "{0}" i porcie {1}.\n\nMo\u017cliwe, \u017ce ten port jest wykorzystywany przez inny proces.
+
+https_server_start_failed_unknown_reason = Nie mo\u017cna uruchomi\u0107 serwera HTTP programu LanguageTool na serwerze "{0}" i porcie {1}.
+
+tray_menu_enable_server = Uruchom serwer HTTP
+
+tray_tooltip_server_running = LanguageTool (uruchomiony serwer HTTP)
