--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_pt_PT.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_pt_PT.properties
@@ -260,3 +260,15 @@ guiWarning = Aten\u00e7\u00e3o
 guiDuplicate = Ficheiro de regras duplicado\!
 
 ja = Japon\u00eas
+
+language_not_supported = Erro\: Desculpa, o idioma do documento "{0}" n\u00e3o \u00e9 suportado por LanguageTool.
+
+http_server_start_failed = O servidor HTTP do LanguageTool n\u00e3o pode ser iniciado no host "{0}", porta {1} - talvez algo j\u00e1 esteja a executar nessa porta?
+
+https_server_start_failed = O servidor HTTPS do LanguageTool n\u00e3o pode ser iniciado no host "{0}", porta {1} - talvez algo j\u00e1 esteja a executar nessa porta?
+
+https_server_start_failed_unknown_reason = O servidor HTTPS do LanguageTool n\u00e3o pode ser iniciado no host "{0}", porta {1}
+
+tray_menu_enable_server = Executar servidor HTTP
+
+tray_tooltip_server_running = LanguageTool (servidor HTTP a executar)
