--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_sl.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_sl.properties
@@ -21,7 +21,7 @@ category_misc = Razno
 
 category_typo = Mo\u017ena tipkarska napaka
 
-checkDone = Preverjanje kon\u010dano, najdenih {0} potencialnih te\u017eav
+checkDone = Najdenih {0} potencialnih te\u017eav (\u010das\: {1}ms)
 
 checkText = &Preveri besedilo
 
@@ -132,7 +132,7 @@ guiMatchCount = Mo\u017ene napake\:
 
 guiMenuAbout = &O raz\u0161iritvi ...
 
-guiMenuAddRules = Nalo\u017ei &datoteko s pravili
+guiMenuAddRules = Nalo\u017ei &datoteko s pravili ...
 
 guiMenuCheckClipboard = &Preveri besedilo na odlo\u017ei\u0161\u010du
 
@@ -211,7 +211,7 @@ result1 = <br><b> {0}. Vrstica {1}, stolpec {2}</b><br>
 
 resultAreaText = Tukaj se bodo izpisali rezultati
 
-resultTime = <br>\u010cas\: {0}ms (vklju\u010dno {1}ms za ujemanje pravil)<br>
+resultTime = <br>\u010cas\: {0}ms<br>
 
 ru = ruski
 
@@ -260,3 +260,15 @@ guiWarning = Opozorilo
 guiDuplicate = Podvojena datoteka s pravili\!
 
 ja = japonski
+
+language_not_supported = Napaka\: \u017dal orodje LanguageTool jezika dokumenta ({0}) ne podpira.
+
+http_server_start_failed = Stre\u017enika HTTP za LanguageTool na gostitelju {0} (vrata {1}) ni mogo\u010de zagnati.\u23ce Morda \u017ee kaj te\u010de na teh vratih?
+
+https_server_start_failed = Stre\u017enika HTTPS za LanguageTool na gostitelju {0} (vrata {1}) ni mogo\u010de zagnati.\u23ce Morda \u017ee kaj te\u010de na teh vratih?
+
+https_server_start_failed_unknown_reason = Stre\u017enika HTTPS za LanguageTool na gostitelju {0} (vrata {1}) ni mogo\u010de zagnati
+
+tray_menu_enable_server = Za\u017eeni stre\u017enik HTTP
+
+tray_tooltip_server_running = LanguageTool (delujo\u010di stre\u017enik HTTP)
