--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_ast.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_ast.properties
@@ -260,3 +260,15 @@ guiWarning = Avisu
 guiDuplicate = \u00a1Ficheru de regles duplic\u00e1u\!
 
 ja = Xapon\u00e9s
+
+language_not_supported = Fallu\: Sent\u00edmoslo, la llingua "{0}" del documentu nun ta sofitada por LanguageTool.
+
+http_server_start_failed = El sirvidor HTTP de LanguageTool nun pudo aniciase nel host "{0}", puertu {1}.\nSeique y\u00e1 heba daqu\u00e9 m\u00e1s execut\u00e1ndose nesi puertu.
+
+https_server_start_failed = El sirvidor HTTPS de LanguageTool nun pudo aniciase nel host "{0}", puertu {1}.\nSeique y\u00e1 heba daqu\u00e9 m\u00e1s execut\u00e1ndose nesi puertu.
+
+https_server_start_failed_unknown_reason = El sirvidor HTTPS de LanguageTool nun pudo aniciase nel host "{0}", puertu {1}
+
+tray_menu_enable_server = Executar sirvidor HTTP
+
+tray_tooltip_server_running = LanguageTool (sirvidor HTTP execut\u00e1ndose)
