--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_br.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_br.properties
@@ -260,3 +260,15 @@ guiWarning = Diwallit
 guiDuplicate = Restr reolenno\u00f9 eilet \!
 
 ja = Japaneg
+
+# language_not_supported = Error\: Sorry, the document language "{0}" is not supported by LanguageTool.
+
+# http_server_start_failed = LanguageTool HTTP server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
+
+# https_server_start_failed = LanguageTool HTTPS server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
+
+# https_server_start_failed_unknown_reason = LanguageTool HTTPS server could not be started on host "{0}", port {1}
+
+# tray_menu_enable_server = Run HTTP server
+
+# tray_tooltip_server_running = LanguageTool (HTTP server running)
