--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_el_GR.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_el_GR.properties
@@ -260,3 +260,15 @@ guiWarning = \u03a0\u03c1\u03bf\u03b5\u03b9\u03b4\u03bf\u03c0\u03bf\u03af\u03b7\
 guiDuplicate = \u03a4\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf \u03ba\u03b1\u03bd\u03cc\u03bd\u03c9\u03bd \u03b5\u03af\u03bd\u03b1\u03b9 \u03ae\u03b4\u03b7 \u03c6\u03bf\u03c1\u03c4\u03c9\u03bc\u03ad\u03bd\u03bf\!
 
 ja = \u0399\u03b1\u03c0\u03c9\u03bd\u03b9\u03ba\u03ac
+
+# language_not_supported = Error\: Sorry, the document language "{0}" is not supported by LanguageTool.
+
+# http_server_start_failed = LanguageTool HTTP server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
+
+# https_server_start_failed = LanguageTool HTTPS server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
+
+# https_server_start_failed_unknown_reason = LanguageTool HTTPS server could not be started on host "{0}", port {1}
+
+# tray_menu_enable_server = Run HTTP server
+
+# tray_tooltip_server_running = LanguageTool (HTTP server running)
