[fr] updated release notes to indicate update      of French Hunspell dictionary.

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -24,7 +24,7 @@ LanguageTool Change Log
   -few new rules
 
  -French:
-  -updated POS tag dictionary to use Dicollecte-4.8
+  -updated POS tag dictionary and Hunspell dictionary to Dicollecte-4.8
   -fixed false alarms
 
  -German:
