[br] updated Breton dictionary to Apertium r42124      and fixed a test that failed as a result.

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -4,9 +4,10 @@ LanguageTool Change Log
 
  -Breton:
   -several new rules and fixed false alarms
-  -updated POS dictionary (fix wrong POS tags)
+  -updated POS dictionary (fix wrong POS tags) from Apertium (svn r42124)
+  -updated FSA spelling dictionary from An Drouizig Breton Spellchecker 0.10
   -updated classification of words tagged as plural nouns of persons
-   (these have different mutation than other nouns).
+   (these have different mutation than other nouns)
 
  -Catalan:
   -many new rules
