latest i18n data from Transifex

--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_da.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_da.properties
@@ -261,14 +261,14 @@ guiDuplicate = Dublet af regelfil\!
 
 ja = Japansk
 
-# language_not_supported = Error\: Sorry, the document language "{0}" is not supported by LanguageTool.
+language_not_supported = Fejl\: Beklager, dokumentsproget "{0}" er ikke underst\u00f8ttet af LanguageTool.
 
-# http_server_start_failed = LanguageTool HTTP server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
+http_server_start_failed = LanguageTool HTTP server kunne ikke startes p\u00e5 v\u00e6rten "{0}", port {1}.\nDer k\u00f8re m\u00e5ske allerede noget andet p\u00e5 den port?
 
-# https_server_start_failed = LanguageTool HTTPS server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
+https_server_start_failed = LanguageTool HTTP server kunne ikke startes p\u00e5 v\u00e6rten "{0}", port {1}.\nDer k\u00f8re m\u00e5ske allerede noget andet p\u00e5 den port?
 
-# https_server_start_failed_unknown_reason = LanguageTool HTTPS server could not be started on host "{0}", port {1}
+https_server_start_failed_unknown_reason = LanguageTool HTTP server kunne ikke startes p\u00e5 v\u00e6rten "{0}", port {1}
 
-# tray_menu_enable_server = Run HTTP server
+tray_menu_enable_server = K\u00f8r HTTP server
 
-# tray_tooltip_server_running = LanguageTool (HTTP server running)
+tray_tooltip_server_running = LanguageTool (HTTP server k\u00f8re)
