--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_it.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_it.properties
@@ -261,14 +261,14 @@ guiDuplicate = File di regole duplicato\!
 
 ja = Giapponese
 
-# language_not_supported = Error\: Sorry, the document language "{0}" is not supported by LanguageTool.
+language_not_supported = Errore\: Spiacente, LanguageTool non gestisce la lingua "{0}". 
 
-# http_server_start_failed = LanguageTool HTTP server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
+http_server_start_failed = Non \u00e8 stato possibile avviare il servizio HTTP per LanguageTool all'indirizzo "{0}", porta {1}.\u23ce La porta potrebbe essere gi\u00e0 allocato ad un'altra applicazione.
 
-# https_server_start_failed = LanguageTool HTTPS server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
+https_server_start_failed = Non \u00e8 stato possibile avviare il servizio HTTPS per LanguageTool all'indirizzo "{0}", porta {1}.\u23ce La porta potrebbe essere gi\u00e0 allocato ad un'altra applicazione.
 
-# https_server_start_failed_unknown_reason = LanguageTool HTTPS server could not be started on host "{0}", port {1}
+https_server_start_failed_unknown_reason = Non \u00e8 stato possibile avviare il servizio HTTPS per LanguageTool all'indirizzo "{0}", porta {1}.
 
-# tray_menu_enable_server = Run HTTP server
+tray_menu_enable_server = Avviare il servizio HTTP.
 
-# tray_tooltip_server_running = LanguageTool (HTTP server running)
+tray_tooltip_server_running = LanguageTool (servizio HTTP attivo)
