--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_sk.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_sk.properties
@@ -40,10 +40,10 @@ de-AT = Nemecky (Rak\u00fasko)
 de-CH = Nemecky (\u0160vaj\u010diarsko)
 
 # deactivate rule with one click (stand-alone GUI):
-# deactivateRule = (deactivate)
+deactivateRule = (deaktivova\u0165)
 
 # information about which rules are currently de-activated (stand-alone GUI):
-# deactivatedRulesText = <br>Deactivated rules - click to activate again\:
+deactivatedRulesText = <br>Deaktivovan\u00e9 pravidl\u00e1 - kliknut\u00edm ich znova zaktivujete\:
 
 desc_comma_whitespace = Pou\u017eitie medzery pred \u010diarkou a pred/za z\u00e1tvorkami
 
@@ -69,7 +69,7 @@ desc_whitespacerepetition = Opakovanie "bielych znakov" napr. medzier (zl\u00e9 
 
 desc_spelling = Pravdepodobne preklep
 
-# desc_spelling_no_suggestions = Possible spelling mistake (without suggestions)
+desc_spelling_no_suggestions = Mo\u017en\u00e9 preklady (bez n\u00e1vrhov)
 
 desc_spelling_short = Preklep
 
@@ -259,16 +259,16 @@ guiWarning = Varovanie
 
 guiDuplicate = Duplicitn\u00fd s\u00fabor pravidiel\!
 
-# ja = Japanese
+ja = Japonsky
 
-# language_not_supported = Error\: Sorry, the document language "{0}" is not supported by LanguageTool.
+language_not_supported = Chyba\: \u013dutujem, ale jazyk dokumentu  "{0}" nie je podporovan\u00fd v LanguageTool.
 
-# http_server_start_failed = LanguageTool HTTP server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
+http_server_start_failed = LanguageTool HTTP server nie je mo\u017en\u00e9 spusti\u0165 na hostite\u013eovi "{0}", port {1}.\nJe mo\u017en\u00e9, \u017ee u\u017e nie\u010do in\u00e9 je spusten\u00e9 na tom porte?
 
-# https_server_start_failed = LanguageTool HTTPS server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
+https_server_start_failed = LanguageTool HTTPS server nie je mo\u017en\u00e9 spusti\u0165 na hostite\u013eovi "{0}", port {1}.\nJe mo\u017en\u00e9, \u017ee u\u017e nie\u010do in\u00e9 je spusten\u00e9 na tom porte?
 
-# https_server_start_failed_unknown_reason = LanguageTool HTTPS server could not be started on host "{0}", port {1}
+https_server_start_failed_unknown_reason = LanguageTool HTTPS server nie je mo\u017en\u00e9 spusti\u0165 na hostite\u013eovi "{0}", port {1}.
 
-# tray_menu_enable_server = Run HTTP server
+tray_menu_enable_server = Spusti\u0165 HTTP server
 
-# tray_tooltip_server_running = LanguageTool (HTTP server running)
+tray_tooltip_server_running = LanguageTool (HTTP server be\u017e\u00ed)
