--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_br.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_br.properties
@@ -261,14 +261,14 @@ guiDuplicate = Restr reolenno\u00f9 eilet \!
 
 ja = Japaneg
 
-# language_not_supported = Error\: Sorry, the document language "{0}" is not supported by LanguageTool.
+language_not_supported = Fazi \: Ho tigarez, n'eo ket skoret ar yezh "{0}" gant LanguageTool.
 
-# http_server_start_failed = LanguageTool HTTP server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
+http_server_start_failed = N'eus ket bet gallet deraoui\u00f1 servijer HTTPS LanguageTool war an ostiz "{0}", porzh {1}. Ha ne vefe ket un dra bennak all o trei\u00f1 war ar porzh-se c'hoazh  ?
 
-# https_server_start_failed = LanguageTool HTTPS server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
+https_server_start_failed = N'eus ket bet gallet deraoui\u00f1 servijer HTTPS LanguageTool war an ostiz "{0}", porzh {1}. Ha ne vefe ket un dra bennak all o trei\u00f1 war ar porzh-se c'hoazh  ?
 
-# https_server_start_failed_unknown_reason = LanguageTool HTTPS server could not be started on host "{0}", port {1}
+https_server_start_failed_unknown_reason = N'eus ket bet gallet deraoui\u00f1 servijer HTTPS LanguageTool war an ostiz "{0}", porzh {1}
 
-# tray_menu_enable_server = Run HTTP server
+tray_menu_enable_server = Lakaat ar servijer HTTP da drei\u00f1
 
-# tray_tooltip_server_running = LanguageTool (HTTP server running)
+tray_tooltip_server_running = LanguageTool (servijer HTTP o trei\u00f1)
