--- a/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_zh.properties
+++ b/trunk/JLanguageTool/src/main/resources/org/languagetool/MessagesBundle_zh.properties
@@ -261,14 +261,14 @@ guiDuplicate = \u91cd\u590d\u89c4\u5219\u6587\u4ef6\!
 
 ja = \u65e5\u8bed
 
-# language_not_supported = Error\: Sorry, the document language "{0}" is not supported by LanguageTool.
+language_not_supported = \u9519\u8bef\uff1a\u5bf9\u4e0d\u8d77\uff0c\u6587\u6863\u8bed\u8a00"{0}"\u4e0d\u88abLanguageTool\u652f\u6301\u3002
 
-# http_server_start_failed = LanguageTool HTTP server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
+http_server_start_failed = LanguageTool HTTP\u670d\u52a1\u5668\u65e0\u6cd5\u542f\u52a8\u5728\u4e3b\u673a"{0}"\uff0c\u7aef\u53e3{1}\u3002\u53ef\u80fd\u7aef\u53e3\u5df2\u7ecf\u88ab\u5176\u4ed6\u7a0b\u5e8f\u4f7f\u7528\u4e86\uff1f
 
-# https_server_start_failed = LanguageTool HTTPS server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
+https_server_start_failed = LanguageTool HTTP\u670d\u52a1\u5668\u65e0\u6cd5\u542f\u52a8\u5728\u4e3b\u673a"{0}"\uff0c\u7aef\u53e3{1}\u3002\u53ef\u80fd\u7aef\u53e3\u5df2\u7ecf\u88ab\u5176\u4ed6\u7a0b\u5e8f\u4f7f\u7528\u4e86\uff1f
 
-# https_server_start_failed_unknown_reason = LanguageTool HTTPS server could not be started on host "{0}", port {1}
+https_server_start_failed_unknown_reason = LanguageTool HTTP\u670d\u52a1\u5668\u65e0\u6cd5\u542f\u52a8\u5728\u4e3b\u673a"{0}"\uff0c\u7aef\u53e3{1}\u3002
 
-# tray_menu_enable_server = Run HTTP server
+tray_menu_enable_server = \u542f\u52a8HTTP\u670d\u52a1\u5668
 
-# tray_tooltip_server_running = LanguageTool (HTTP server running)
+tray_tooltip_server_running = LanguageTool (HTTP\u670d\u52a1\u5668\u6b63\u5728\u8fd0\u884c)
