start development of 2.1-dev

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -1,5 +1,10 @@
 LanguageTool Change Log
 
+2.1-dev (release planned for 2013-03-31)
+
+ -...
+
+
 2.0 (2012-12-30)
 
  -Breton:
@@ -22,7 +27,7 @@ LanguageTool Change Log
   -fix Sourceforge bug #3479817 (capitalization of the first item of a list not required)
   -a few rule updates
 
- -Esperanto
+ -Esperanto:
   -few new rules
 
  -French:
