--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -2,7 +2,7 @@ LanguageTool Change Log
 
 2.1-dev (release planned for 2013-03-31)
 
- -...
+ -bugfix: suggestions for compounds parts were missing sometimes
 
 
 2.0 (2012-12-30)
