[ca] Nameplaces added to the dictionaries. Dictionaries rebuilt in UTF-8.

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -2,6 +2,11 @@ LanguageTool Change Log
 
 2.1-dev (release planned for 2013-03-31)
 
+ -Catalan:
+  -fixed false alarms
+  -Added about 9000 nameplaces to the dictionary. Source: enciclopedia.cat. Some processing 
+   done for generating (partial) gender and number data.  
+
  -bugfix: suggestions for compounds parts were missing sometimes
 
 
