[fr] Switch to SRX sentence tokenizer in French.

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -7,6 +7,9 @@ LanguageTool Change Log
   -Added about 9000 nameplaces to the dictionary. Source: enciclopedia.cat. Some processing 
    done for generating (partial) gender and number data.  
 
+ -French:
+   -SRX sentence tokenization
+
  -bugfix: suggestions for compounds parts were missing sometimes
 
 
