--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -8,7 +8,16 @@ LanguageTool Change Log
    done for generating (partial) gender and number data.  
 
  -French:
-   -SRX sentence tokenization
+  -SRX sentence tokenization
+   
+ -German:
+   -the German spell checker now returns suggestions. We combine Hunspell and our own
+    morfologik-based spell checker to create the suggestions for good performance,
+    but they are far from perfect yet. First, some misspelled compound words fail to have
+    a suggestion. Second, sometimes the best suggestion is not at the front of the list
+    of suggestions.
+    org/languagetool/resource/de/hunspell/create_dict.sh can be used to create
+    the three morfologik spell checker dictionaries (German, Austrian, und Swiss).
 
  -bugfix: suggestions for compounds parts were missing sometimes
 
