Updated CHANGES.txt for French & Esperanto.

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -4,20 +4,24 @@ LanguageTool Change Log
 
  -Catalan:
   -fixed false alarms
-  -Added about 9000 nameplaces to the dictionary. Source: enciclopedia.cat. Some processing 
-   done for generating (partial) gender and number data.  
+  -Added about 9000 nameplaces to the dictionary. Source: enciclopedia.cat. Some processing
+   done for generating (partial) gender and number data.
+
+ -Esperanto:
+  -Added/improved several rules
 
  -French:
   -SRX sentence tokenization
+  -Added/improved several rules
    
  -German:
-   -the German spell checker now returns suggestions. We combine Hunspell and our own
-    morfologik-based spell checker to create the suggestions for good performance,
-    but they are far from perfect yet. First, some misspelled compound words fail to have
-    a suggestion. Second, sometimes the best suggestion is not at the front of the list
-    of suggestions.
-    org/languagetool/resource/de/hunspell/create_dict.sh can be used to create
-    the three morfologik spell checker dictionaries (German, Austrian, und Swiss).
+  -the German spell checker now returns suggestions. We combine Hunspell and our own
+   morfologik-based spell checker to create the suggestions for good performance,
+   but they are far from perfect yet. First, some misspelled compound words fail to have
+   a suggestion. Second, sometimes the best suggestion is not at the front of the list
+   of suggestions.
+   org/languagetool/resource/de/hunspell/create_dict.sh can be used to create
+   the three morfologik spell checker dictionaries (German, Austrian, und Swiss).
 
  -bugfix: suggestions for compounds parts were missing sometimes
 
@@ -132,7 +136,7 @@ LanguageTool Change Log
 
  -Esperanto:
    -several new rules and fixed false alarms
-   -updated list of transitive/nontransitive verbs
+   -updated list of transitive/intransitive verbs
    -added <url> links to REVO (Reta Vortaro) with permission from Wolfram Diestel.
 
  -French:
