work against the very first slow check because we use so much lazy init: init the LT object with the default language

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -24,6 +24,9 @@ LanguageTool Change Log
    the three morfologik spell checker dictionaries (German, Austrian, und Swiss).
 
  -bugfix: suggestions for compounds parts were missing sometimes
+ 
+ -stand-alone GUI: the very first check for languages with a lot of rules
+  (e.g. German, French) should now be faster
 
 
 2.0 (2012-12-30)
