Updated CHANGES.txt to reflect changes to Esperanto & French.

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -9,11 +9,13 @@ LanguageTool Change Log
 
  -Esperanto:
   -Added/improved several rules
+  -Single quotes at beginning/end of word no longer cause false spelling error.
 
  -French:
-  -SRX sentence tokenization
   -Added/improved several rules
-   
+  -SRX sentence tokenization
+  -Single quotes at beginning/end of word no longer cause false spelling error.
+
  -German:
   -the German spell checker now returns suggestions. We combine Hunspell and our own
    morfologik-based spell checker to create the suggestions for good performance,
@@ -24,7 +26,7 @@ LanguageTool Change Log
    the three morfologik spell checker dictionaries (German, Austrian, und Swiss).
 
  -bugfix: suggestions for compounds parts were missing sometimes
- 
+
  -stand-alone GUI: the very first check for languages with a lot of rules
   (e.g. German, French) should now be faster
 
