[PT] - Wrote there that we now have over 1000 compound words - Added/improved rules in grammar.xml

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -1,4 +1,4 @@
-LanguageTool Change Log
+﻿LanguageTool Change Log
 
 2.1-dev (release planned for 2013-03-31)
 
@@ -24,6 +24,11 @@ LanguageTool Change Log
    of suggestions.
    org/languagetool/resource/de/hunspell/create_dict.sh can be used to create
    the three morfologik spell checker dictionaries (German, Austrian, und Swiss).
+
+ -Portuguese:
+  -It now has over 1000 compound words taken from a huge Porto Editora dictionary
+  -Added/improved several rules
+
 
  -bugfix: suggestions for compounds parts were missing sometimes
 
