bugfix: only the first line a POST request's body was considered

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -35,10 +35,12 @@
  -stand-alone GUI: the very first check for languages with a lot of rules
   (e.g. German, French) should now be faster
   
- -embedded HTTPS server: two new properties, to be set from the property configuration file,
-  allow limiting the maximum number of requests:
+ -embedded HTTPS server:
+  -two new properties, to be set from the property configuration file,
+   allow limiting the maximum number of requests:
     requestLimit - the maximum number of requests 
     requestLimitPeriodInSeconds - the time period in which the requests are considered, in seconds
+  -bugfix: only the first line a POST request's body was considered
 
 
 2.0 (2012-12-30)
