bugfix: Portuguese translation was not used because its bundle file is "pt_PT" but we were only looking for "pt"; small whitespace cleanups

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -31,6 +31,8 @@
 
 
  -bugfix: suggestions for compounds parts were missing sometimes
+ 
+ -bugfix: Portuguese translation was not used
 
  -stand-alone GUI: the very first check for languages with a lot of rules
   (e.g. German, French) should now be faster
