updated CHANGES.txt for Breton, French and Esperanto.

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -2,19 +2,24 @@
 
 2.1-dev (release planned for 2013-03-31)
 
+ -Breton
+  -fixed several incorrect suggestions thanks to added tests on corrections.
+
  -Catalan:
   -fixed false alarms
   -Added about 9000 nameplaces to the dictionary. Source: enciclopedia.cat. Some processing
    done for generating (partial) gender and number data.
 
  -Esperanto:
-  -Added/improved several rules
-  -Single quotes at beginning/end of word no longer cause false spelling error.
+  -added/improved several rules
+  -fixed several incorrect suggestions thanks to added tests on corrections.
+  -single quotes at beginning/end of word no longer cause false spelling error.
 
  -French:
-  -Added/improved several rules
+  -added/improved several rules
+  -fixed several incorrect suggestions thanks to added tests on corrections.
   -SRX sentence tokenization
-  -Single quotes at beginning/end of word no longer cause false spelling error.
+  -single quotes at beginning/end of word no longer cause false spelling error.
 
  -German:
   -the German spell checker now returns suggestions. We combine Hunspell and our own
