--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -2,7 +2,7 @@
 
 2.1-dev (release planned for 2013-03-31)
 
- -Breton
+ -Breton:
   -fixed several incorrect suggestions thanks to added tests on corrections.
 
  -Catalan:
@@ -31,8 +31,11 @@
    the three morfologik spell checker dictionaries (German, Austrian, und Swiss).
 
  -Portuguese:
-  -It now has over 1000 compound words taken from a huge Porto Editora dictionary
-  -Added/improved several rules
+  -it now has over 1000 compound words taken from a huge Porto Editora dictionary
+  -added/improved several rules
+ 
+ -Russion:
+   -bugfix: the uppercase sentence rule sometimes was not triggered
 
 
  -bugfix: suggestions for compounds parts were missing sometimes
