[ca] Fixed multiple false alarms. Improved sentence and word tokenization.

--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -6,9 +6,10 @@
   -fixed several incorrect suggestions thanks to added tests on corrections.
 
  -Catalan:
-  -fixed false alarms
+  -Fixed false alarms.
   -Added about 9000 nameplaces to the dictionary. Source: enciclopedia.cat. Some processing
    done for generating (partial) gender and number data.
+  -Improved sentence and word tokenization. 
 
  -Esperanto:
   -added/improved several rules
