--- a/trunk/JLanguageTool/CHANGES.txt
+++ b/trunk/JLanguageTool/CHANGES.txt
@@ -9,17 +9,18 @@
   -Fixed false alarms.
   -Added about 9000 nameplaces to the dictionary. Source: enciclopedia.cat. Some processing
    done for generating (partial) gender and number data.
-  -Improved sentence and word tokenization. 
+  -Improved sentence and word tokenization.
 
  -Esperanto:
-  -added/improved several rules
+  -added/improved several rules.
   -fixed several incorrect suggestions thanks to added tests on corrections.
   -single quotes at beginning/end of word no longer cause false spelling error.
 
  -French:
-  -added/improved several rules
+  -updated POS tag dictionary and Hunspell dictionary to Dicollecte-4.9.
+  -added/improved several rules.
   -fixed several incorrect suggestions thanks to added tests on corrections.
-  -SRX sentence tokenization
+  -SRX sentence tokenization.
   -single quotes at beginning/end of word no longer cause false spelling error.
 
  -German:
@@ -29,27 +30,27 @@
    a suggestion. Second, sometimes the best suggestion is not at the front of the list
    of suggestions.
    org/languagetool/resource/de/hunspell/create_dict.sh can be used to create
-   the three morfologik spell checker dictionaries (German, Austrian, und Swiss).
+   the three morfologik spell checker dictionaries (German, Austrian, and Swiss).
 
  -Portuguese:
   -it now has over 1000 compound words taken from a huge Porto Editora dictionary
   -added/improved several rules
- 
+
  -Russion:
    -bugfix: the uppercase sentence rule sometimes was not triggered
 
 
  -bugfix: suggestions for compounds parts were missing sometimes
- 
+
  -bugfix: Portuguese translation was not used
 
  -stand-alone GUI: the very first check for languages with a lot of rules
   (e.g. German, French) should now be faster
-  
+
  -embedded HTTPS server:
   -two new properties, to be set from the property configuration file,
    allow limiting the maximum number of requests:
-    requestLimit - the maximum number of requests 
+    requestLimit - the maximum number of requests
     requestLimitPeriodInSeconds - the time period in which the requests are considered, in seconds
   -bugfix: only the first line a POST request's body was considered
 
@@ -1007,7 +1008,7 @@
   for this language (Martin Srebotnjak)
 
  -Updated Slovak translation and added Slovak sentence
-  tokenizer (Zdenko Podobný) .
+  tokenizer (Zdenko Podobný).
 
  -Fixed a NullPointerException that could appear when using
   paragraph-level rules (SF bug # 2787814), removed bugs that lead to false positives
