--- a/languagetool-core/CHANGES.txt
+++ b/languagetool-core/CHANGES.txt
@@ -28,7 +28,7 @@
    a suggestion. Second, sometimes the best suggestion is not at the front of the list
    of suggestions.
    org/languagetool/resource/de/hunspell/create_dict.sh can be used to create
-   the three morfologik spell checker dictionaries (German, Austrian, und Swiss).
+   the three morfologik spell checker dictionaries (German, Austrian, and Swiss).
 
  -Portuguese:
   -it now has over 1000 compound words taken from a huge Porto Editora dictionary
@@ -473,7 +473,7 @@
    -several new rules (Paolo Bianchini)
  -Khmer:
    -configuration of Khmer rules should now work in OpenOffice.org/LibreOffice
-   -small updates for coherency rules und error rules (Nathan Wells)
+   -small updates for coherency rules and error rules (Nathan Wells)
  -Russian:
    -added multiwords disambiguation rules
    -several new rules
