Malayalam: document that the default sentence tokenizer is used now

--- a/languagetool-core/CHANGES.txt
+++ b/languagetool-core/CHANGES.txt
@@ -32,6 +32,10 @@
    org/languagetool/resource/de/hunspell/create_dict.sh can be used to create
    the three morfologik spell checker dictionaries (German, Austrian, and Swiss).
 
+ -Malayalam:
+  -now uses the default sentence tokenizer, not the English one (because languages
+   are now modules that don't depend on each other)
+  
  -Portuguese:
   -it now has over 1000 compound words taken from a huge Porto Editora dictionary
   -added/improved several rules
