document "suggestion" element outside the "message" element

--- a/languagetool-core/CHANGES.txt
+++ b/languagetool-core/CHANGES.txt
@@ -50,6 +50,12 @@
   -org.languagetool.gui.ResourceBundleWithFallback is now org.languagetool.ResourceBundleWithFallback
   -org.languagetool.gui.ContextTools is now org.languagetool.tools.ContextTools
 
+ -rule syntax: Suggestions now are also allowed outside the <message> element. Example:
+    <message>Did you mean <suggestion>A</suggestion>?<message>
+    <suggestion>B</suggestion>
+    <suggestion>C</suggestion>
+    <example type="incorrect" correction="A|B|C"><marker>asdf</marker></example>
+               
  -bugfix: suggestions for compounds parts were missing sometimes
 
  -bugfix: Portuguese translation was not used
