--- a/languagetool-language-modules/el/src/main/resources/org/languagetool/MessagesBundle_el_GR.properties
+++ b/languagetool-language-modules/el/src/main/resources/org/languagetool/MessagesBundle_el_GR.properties
@@ -261,14 +261,14 @@ guiDuplicate = \u03a4\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf \u03ba\u03b1\u0
 
 ja = \u0399\u03b1\u03c0\u03c9\u03bd\u03b9\u03ba\u03ac
 
-# language_not_supported = Error\: Sorry, the document language "{0}" is not supported by LanguageTool.
+language_not_supported = \u03a3\u03c6\u03ac\u03bb\u03bc\u03b1\: \u0397 \u03b3\u03bb\u03ce\u03c3\u03c3\u03b1 "{0}" \u03b4\u03b5\u03bd \u03c5\u03c0\u03bf\u03c3\u03c4\u03b7\u03c1\u03af\u03b6\u03b5\u03c4\u03b1\u03b9 \u03b1\u03c0\u03cc \u03c4\u03bf LanguageTool.
 
-# http_server_start_failed = LanguageTool HTTP server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
+http_server_start_failed = \u0391\u03b4\u03c5\u03bd\u03b1\u03bc\u03af\u03b1 \u03b5\u03ba\u03ba\u03af\u03bd\u03b7\u03c3\u03b7\u03c2 \u03c4\u03bf\u03c5 \u03b4\u03b9\u03b1\u03ba\u03bf\u03bc\u03b9\u03c3\u03c4\u03ae HTTP \u03c4\u03bf\u03c5 LanguageTool \u03c3\u03c4\u03bf\u03bd host "{0}", port {1}.\n\u0392\u03b5\u03b2\u03b1\u03b9\u03c9\u03b8\u03b5\u03af\u03c4\u03b5 \u03cc\u03c4\u03b9 \u03b7 \u03c0\u03cc\u03c1\u03c4\u03b1 \u03b4\u03b5\u03bd \u03b5\u03af\u03bd\u03b1\u03b9 \u03ba\u03b1\u03c4\u03b5\u03b9\u03bb\u03b7\u03bc\u03bc\u03ad\u03bd\u03b7.
 
-# https_server_start_failed = LanguageTool HTTPS server could not be started on host "{0}", port {1}.\nMaybe something else is running on that port already?
+https_server_start_failed = \u0391\u03b4\u03c5\u03bd\u03b1\u03bc\u03af\u03b1 \u03b5\u03ba\u03ba\u03af\u03bd\u03b7\u03c3\u03b7\u03c2 \u03c4\u03bf\u03c5 \u03b4\u03b9\u03b1\u03ba\u03bf\u03bc\u03b9\u03c3\u03c4\u03ae HTTPS \u03c4\u03bf\u03c5 LanguageTool \u03c3\u03c4\u03bf\u03bd host "{0}", port {1}.\n\u0392\u03b5\u03b2\u03b1\u03b9\u03c9\u03b8\u03b5\u03af\u03c4\u03b5 \u03cc\u03c4\u03b9 \u03b7 \u03c0\u03cc\u03c1\u03c4\u03b1 \u03b4\u03b5\u03bd \u03b5\u03af\u03bd\u03b1\u03b9 \u03ba\u03b1\u03c4\u03b5\u03b9\u03bb\u03b7\u03bc\u03bc\u03ad\u03bd\u03b7.
 
-# https_server_start_failed_unknown_reason = LanguageTool HTTPS server could not be started on host "{0}", port {1}
+https_server_start_failed_unknown_reason = \u0391\u03b4\u03c5\u03bd\u03b1\u03bc\u03af\u03b1 \u03b5\u03ba\u03ba\u03af\u03bd\u03b7\u03c3\u03b7\u03c2 \u03c4\u03bf\u03c5 \u03b4\u03b9\u03b1\u03ba\u03bf\u03bc\u03b9\u03c3\u03c4\u03ae HTTPS \u03c4\u03bf\u03c5 LanguageTool \u03c3\u03c4\u03bf\u03bd host "{0}", port {1}
 
-# tray_menu_enable_server = Run HTTP server
+tray_menu_enable_server = \u0395\u03ba\u03ba\u03af\u03bd\u03b7\u03c3\u03b7 \u03b4\u03b9\u03b1\u03ba\u03bf\u03bc\u03b9\u03c3\u03c4\u03ae HTTP
 
-# tray_tooltip_server_running = LanguageTool (HTTP server running)
+tray_tooltip_server_running = LanguageTool (\u03bf \u03b4\u03b9\u03b1\u03ba\u03bf\u03bc\u03b9\u03c3\u03c4\u03ae\u03c2 HTTP \u03b5\u03ba\u03c4\u03b5\u03bb\u03b5\u03af\u03c4\u03b1\u03b9)
