[br] updated CHANGES.txt to indicate update of      Breton spelling dictionary.

--- a/languagetool-core/CHANGES.txt
+++ b/languagetool-core/CHANGES.txt
@@ -4,6 +4,7 @@
 
  -Breton:
   -fixed several incorrect suggestions thanks to added tests on corrections.
+  -updated FSA spelling dictionary from An Drouizig Breton Spellchecker 0.11
 
  -Catalan:
   -fixed false alarms.
