--- a/languagetool-core/CHANGES.txt
+++ b/languagetool-core/CHANGES.txt
@@ -43,6 +43,7 @@
 
  -Russian:
    -bugfix: the uppercase sentence rule sometimes was not triggered
+   -several new rules
 
  -API: Languagetool has been split up into several Maven modules. This causes
   some API changes:
