[en] English dictionaries update

--- a/languagetool-core/CHANGES.txt
+++ b/languagetool-core/CHANGES.txt
@@ -12,6 +12,10 @@
    done for generating (partial) gender and number data.
   -Improved sentence and word tokenization.
 
+ -English:
+  -updated the tagger and synthesizer dictionaries to recognize more words
+  -updated the dictionary building script
+
  -Esperanto:
   -added/improved several rules.
   -fixed several incorrect suggestions thanks to added tests on corrections.
