document new fix for ConcurrentModificationException

--- a/languagetool-core/CHANGES.txt
+++ b/languagetool-core/CHANGES.txt
@@ -76,6 +76,9 @@
     requestLimitPeriodInSeconds - the time period in which the requests are considered, in seconds
   -bugfix: only the first line a POST request's body was considered
 
+ -OpenOffice/LibreOffice integration:
+  -Another try to fix the ConcurrentModificationException (Sourceforge bug #3572536)
+
 
 2.0 (2012-12-30)
 
