--- a/languagetool-core/CHANGES.txt
+++ b/languagetool-core/CHANGES.txt
@@ -3,6 +3,7 @@
 2.1-dev (release planned for 2013-03-31)
 
  -Breton:
+  -added/improved several rules.
   -fixed several incorrect suggestions thanks to added tests on corrections.
   -updated FSA spelling dictionary from An Drouizig Breton Spellchecker 0.11
 
@@ -40,7 +41,7 @@
  -Malayalam:
   -now uses the default sentence tokenizer, not the English one (because languages
    are now modules that don't depend on each other)
-  
+
  -Portuguese:
   -it now has over 1000 compound words taken from a huge Porto Editora dictionary
   -added/improved several rules
@@ -61,7 +62,7 @@
     <suggestion>B</suggestion>
     <suggestion>C</suggestion>
     <example type="incorrect" correction="A|B|C"><marker>asdf</marker></example>
-               
+
  -bugfix: suggestions for compounds parts were missing sometimes
 
  -bugfix: Portuguese translation was not used
@@ -79,6 +80,8 @@
  -OpenOffice/LibreOffice integration:
   -Another try to fix the ConcurrentModificationException (Sourceforge bug #3572536)
 
+ -Command line:
+   -In verbose mode, the subId of disambiguator matched rules is displayed.
 
 2.0 (2012-12-30)
 
