mention removal of LanguageIdentifierTools.ADDITIONAL_LANGUAGES

--- a/languagetool-core/CHANGES.txt
+++ b/languagetool-core/CHANGES.txt
@@ -56,6 +56,8 @@
    for all other languages
   -org.languagetool.gui.ResourceBundleWithFallback is now org.languagetool.ResourceBundleWithFallback
   -org.languagetool.gui.ContextTools is now org.languagetool.tools.ContextTools
+  -LanguageIdentifierTools.ADDITIONAL_LANGUAGES has been removed, languages are
+   detected at runtime now
 
  -rule syntax: Suggestions now are also allowed outside the <message> element. Example:
     <message>Did you mean <suggestion>A</suggestion>?<message>
