fix false alarm of unpaired bracket rule on smileys :-) and ;-) (Sourceforge bug #3604367)

--- a/languagetool-core/CHANGES.txt
+++ b/languagetool-core/CHANGES.txt
@@ -68,6 +68,8 @@
  -bugfix: suggestions for compounds parts were missing sometimes
 
  -bugfix: Portuguese translation was not used
+ 
+ -bugfix: fix false alarm of unpaired bracket rule on smileys :-) and ;-) (Sourceforge bug #3604367)
 
  -stand-alone GUI: the very first check for languages with a lot of rules
   (e.g. German, French) should now be faster
@@ -84,6 +86,7 @@
 
  -Command line:
    -In verbose mode, the subId of disambiguator matched rules is displayed.
+
 
 2.0 (2012-12-30)
 
