[ca] Tagger dictionary updated. Hunspell dictionary (from Softcatalà) has been replaced with LT tagger dictionary for spellchecking. Hunspell dictionary is pending removal.

--- a/languagetool-core/CHANGES.txt
+++ b/languagetool-core/CHANGES.txt
@@ -8,10 +8,12 @@
   -updated FSA spelling dictionary from An Drouizig Breton Spellchecker 0.11
 
  -Catalan:
-  -fixed false alarms.
-  -Added about 9000 nameplaces to the dictionary. Source: enciclopedia.cat. Some processing
-   done for generating (partial) gender and number data.
-  -Improved sentence and word tokenization.
+  -added/improved several rules.
+  -fixed multiple false alarms.
+  -improved sentence and word tokenization.
+  -the tagger dictionary has been fixed and expanded (added 9000 nameplaces).
+  -Hunspell dictionary (Softcatalà) has been replaced with LT tagger dictionary 
+  for spellchecking. 
 
  -English:
   -updated the tagger and synthesizer dictionaries to recognize more words
