--- a/languagetool-core/CHANGES.txt
+++ b/languagetool-core/CHANGES.txt
@@ -12,6 +12,7 @@
   -fixed multiple false alarms.
   -improved sentence and word tokenization.
   -the tagger dictionary has been fixed and expanded (added 9000 nameplaces).
+  -Verbal forms have been tagged according to regional variants (with script tag_verbs.pl).
   -Hunspell dictionary (Softcatalà) has been replaced with LT tagger dictionary 
   for spellchecking. 
 
