--- a/languagetool-core/CHANGES.txt
+++ b/languagetool-core/CHANGES.txt
@@ -52,6 +52,10 @@
  -Russian:
    -bugfix: the uppercase sentence rule sometimes was not triggered
    -several new rules
+   
+ -Polish:
+   -major tagger and synthesis dictionary update (to Morfologik 2.0 PoliMorf)
+   -false alarm fixes
 
  -API: Languagetool has been split up into several Maven modules. This causes
   some API changes:
