--- a/languagetool-core/CHANGES.txt
+++ b/languagetool-core/CHANGES.txt
@@ -19,6 +19,7 @@
  -English:
   -updated the tagger and synthesizer dictionaries to recognize more words
   -updated the dictionary building script
+  -fixed some false alarms
 
  -Esperanto:
   -added/improved several rules.
