[pl] fix more false alarms, add yet another rule

--- a/languagetool-core/CHANGES.txt
+++ b/languagetool-core/CHANGES.txt
@@ -57,6 +57,7 @@
  -Polish:
    -major tagger and synthesis dictionary update (to Morfologik 2.0 PoliMorf)
    -false alarm fixes
+   -added and improved some rules
 
  -API: Languagetool has been split up into several Maven modules. This causes
   some API changes:
