add regexp checks for disambiguation rules

--- a/languagetool-core/CHANGES.txt
+++ b/languagetool-core/CHANGES.txt
@@ -95,6 +95,10 @@
 
  -Command line:
    -In verbose mode, the subId of disambiguator matched rules is displayed.
+   
+ -Testing rules:
+   -Now regular expressions in disambiguation rules are heuristically tested
+    (Sourceforge bug #3599002)
 
 
 2.0 (2012-12-30)
