--- a/languagetool-core/CHANGES.txt
+++ b/languagetool-core/CHANGES.txt
@@ -55,7 +55,8 @@
    -several new rules
    
  -Polish:
-   -major tagger and synthesis dictionary update (to Morfologik 2.0 PoliMorf)
+   -major tagger and synthesis dictionary update (to Morfologik 2.0 PoliMorf), which also
+    fixes sf.net bug #3554018 
    -false alarm fixes
    -added and improved some rules
 
