[br] updated the Breton POS dictionary to Apertium SVN r42904.

--- a/languagetool-core/CHANGES.txt
+++ b/languagetool-core/CHANGES.txt
@@ -6,6 +6,7 @@
   -added/improved several rules.
   -fixed several incorrect suggestions thanks to added tests on corrections.
   -updated FSA spelling dictionary from An Drouizig Breton Spellchecker 0.11
+  -updated POS dictionary from Apertium (svn r42904)
 
  -Catalan:
   -added/improved several rules.
