--- a/languagetool-core/CHANGES.txt
+++ b/languagetool-core/CHANGES.txt
@@ -5,6 +5,8 @@
  -Breton:
   -added/improved several rules.
   -fixed several incorrect suggestions thanks to added tests on corrections.
+  -spelling checker now ignores words with a POS tag, hence accepting words
+   which are in Apertium or in An Drouizig spelling checker.
   -updated FSA spelling dictionary from An Drouizig Breton Spellchecker 0.11
   -updated POS dictionary from Apertium (svn r42904)
 
