fix sf bug #3600995 (and a buggy Polish example)

--- a/languagetool-core/CHANGES.txt
+++ b/languagetool-core/CHANGES.txt
@@ -83,6 +83,8 @@
  -bugfix: Portuguese translation was not used
  
  -bugfix: fix false alarm of unpaired bracket rule on smileys :-) and ;-) (Sourceforge bug #3604367)
+ 
+ -bugfix: testrules now report all cases when untouched examples were touched (Sourceforge bug #3600995)
 
  -stand-alone GUI: the very first check for languages with a lot of rules
   (e.g. German, French) should now be faster
