[en] fix sf bug #3560624 (missing CD tags for numbers)

--- a/languagetool-core/CHANGES.txt
+++ b/languagetool-core/CHANGES.txt
@@ -20,7 +20,9 @@
   for spellchecking. 
 
  -English:
-  -updated the tagger and synthesizer dictionaries to recognize more words
+  -updated the tagger and synthesizer dictionaries to recognize more words, including
+   plural forms of nouns, new verbs, and missing cardinal numerals (fixes Sourceforge
+   bug #3600995)
   -updated the dictionary building script
   -fixed some false alarms
 
