ignore URLs in spell checking by extending the tokenizer to recognize them as one token

--- a/languagetool-core/CHANGES.txt
+++ b/languagetool-core/CHANGES.txt
@@ -65,6 +65,9 @@
    -false alarm fixes
    -added and improved some rules
 
+ -spell checking: URLs, if specified like "http://www.foo.org", are now ignored and
+  don't cause a spelling error anymore
+ 
  -API: Languagetool has been split up into several Maven modules. This causes
   some API changes:
   -No more language constants: "Language.GERMAN" now needs to be "new German()", similarly
