--- a/languagetool-core/CHANGES.txt
+++ b/languagetool-core/CHANGES.txt
@@ -14,10 +14,12 @@
   -added/improved several rules.
   -fixed multiple false alarms.
   -improved sentence and word tokenization.
-  -the tagger dictionary has been fixed and expanded (added 9000 nameplaces).
+  -the tagger dictionary has been fixed and expanded (added 9000 nameplaces; 
+  115000 tagged forms from Softcatalà dictionary).
   -verbal forms have been tagged according to regional variants (with script tag_verbs.pl).
   -Hunspell dictionary (Softcatalà) has been replaced with LT tagger dictionary 
   for spellchecking. 
+  -spelling checker now ignores words with a POS tag (from multiwords.txt or disambiguation.xml).
 
  -English:
   -updated the tagger and synthesizer dictionaries to recognize more words, including
